@@ -1,3 +1,7 @@
+2014-10-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/transpose.sh: script to transpose rows and columns added
+
 2014-10-06	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/latexrefre.sh: showing multiply-defined labels
